--- a/IntermediateCSS/odinProjectTutorial17/css/style.css
+++ b/IntermediateCSS/odinProjectTutorial17/css/style.css
@@ -46,7 +46,9 @@ textarea {
      /* Match form field borders */
      border: 1px solid #999;
 }
-
+textarea{
+    resize: none;
+}
 input:focus,
 textarea:focus {
     /* Additional highlight for focused elements */
